Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-88005

Crash (or broken rendering) when using a non-HDR texture as lightProbe

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.0.0
    • 6.0.0 Beta2
    • Quick: 3D
    • None
    • Qt Quick 3D - Week 43/44

      Switch a light probe from a .hdr file to a .png. The result is a crash since the loaded RGB(A) QImage data will be used in combination with the RGBA16F format, as if it was .hdr.

      It may not make much sense to try using ordinary rgba images for IBL and skyboxes, but at least it should not crash.

      When fixing the crash the rendered results are less than ideal so there are further issues here than just crashing. Perhaps there are floating point assumptions elsewhere too.

       

       

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lagocs Laszlo Agocs
            lagocs Laszlo Agocs
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes