src/runtimerender/resourcemanager/qssgrenderloadedtexture_p.h
@@ -105,12 +105,8 @@ public:
                                    const QSSGRenderTextureFormat &inFormat,
                                    QSSGInputStreamFactory &inFactory,
                                    bool inFlipY = true);
-    static QSSGLoadedTexture *loadQImage(const QString &inPath,
-                                         const QSSGRenderTextureFormat &inFormat,
-                                         qint32 flipVertical);
-    static QSSGLoadedTexture *loadCompressedImage(const QString &inPath,
-                                                  const QSSGRenderTextureFormat &inFormat,
-                                                  bool inFlipY = true);
+    static QSSGLoadedTexture *loadQImage(const QString &inPath, qint32 flipVertical);
+    static QSSGLoadedTexture *loadCompressedImage(const QString &inPath, bool inFlipY = true);
     static QSSGLoadedTexture *loadHdrImage(const QSharedPointer<QIODevice> &source, const QSSGRenderTextureFormat &inFormat);
     static QSSGLoadedTexture *loadTextureData(QSSGRenderTextureData *textureData);
 };
